gcc/testsuite/g++.old-deja/g++.pt/enum5.C
// { dg-do assemble  }

template <> // { dg-error "" } template declaration of enum
enum E {e};
